events work nowadded accept/content-type headersfixed post uri endpointfixed tagRule key not being properly assigned

--- a/.drone.yml
+++ b/.drone.yml
@@ -23,7 +23,7 @@ steps:
       dynatrace_api_token:
         from_secret: dttoken
       dynatrace_entity_type: HOST
-      dynatrace_tag_rule: sablevm
+      dynatrace_tag_rule: SableVM
 
   - name: Notify
     image: appleboy/drone-discord
