breaking update - not expected to work, use 0.1.0 tag/image - plugin settings changed. using customer format now - tests written for parsing new plugin settings input - update .drone.yaml with new format

--- a/.drone.yml
+++ b/.drone.yml
@@ -22,8 +22,9 @@ steps:
         from_secret: dtenv
       dynatrace_api_token:
         from_secret: dttoken
-      dynatrace_entity_type: HOST
-      dynatrace_tag_rule: SableVM
+      tagrules:
+        - HOST=CONTEXTLESS:SableVM
+        - HOST=SableVM
 
   - name: Notify
     image: appleboy/drone-discord
@@ -36,5 +37,5 @@ steps:
         {{#success build.status}}
           dynatrace-drone-events build {{build.number}} succeeded. Yay.
         {{else}}
-          :x: QS Deploy {{build.number}} failed. Fix me please.
+          dynatrace-drone-events build {{build.number}} failed. Fix me please.
         {{/success}}
