--- a/.drone.yml
+++ b/.drone.yml
@@ -29,8 +29,10 @@ steps:
       dynatrace_api_token:
         from_secret: dttoken
       tagrules:
-        - HOST=CONTEXTLESS:SableVM
         - HOST=SableVM
+      customprops:
+        - msg=This is what I wanted to say
+        - msg2=We're just showing the other custom prop values
 
   - name: Notify
     image: appleboy/drone-discord
