--- a/.drone.yml
+++ b/.drone.yml
@@ -29,7 +29,7 @@ steps:
       dynatrace_api_token:
         from_secret: dttoken
       tagrules:
-        - HOST=HyperVisor&&SableBeast
+        - HOST=HyperVisor&&[CONTEXTLESS]SableBeast
       customproperties:
         - msg=This is what I wanted to say
         - msg2=We're just showing the other custom prop values
